Fix z-index

--- a/scss/pages/index/_nav.scss
+++ b/scss/pages/index/_nav.scss
@@ -2,6 +2,7 @@
 	.nav-bar {
 		background: #697b99;
 		box-shadow: 0 2px 2px 0 rgba(0,0,0,.20), 0 6px 10px 0 rgba(0,0,0,.30);
+		z-index: 100;
 
 		.menu {
 			font-weight: bold;
